chore: fixed email styling on mobile

--- a/assets/css/_email.scss
+++ b/assets/css/_email.scss
@@ -1,6 +1,6 @@
 body.email {
   max-width: 600px !important;
-  padding-top: 0;
+  padding: 0;
   margin: 0 auto !important;
   .container {
     padding-left: 0px;
@@ -8,6 +8,10 @@ body.email {
     .row {
       margin-left: 0;
       margin-right: 0;
+      .col-12 {
+        padding-left: 5px;
+        padding-right: 5px;
+      }
     }
   }
   img {
